번호추천 화면이동

--- a/ios_lottostat/Controller/Main/MainViewController.storyboard
+++ b/ios_lottostat/Controller/Main/MainViewController.storyboard
@@ -20,6 +20,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uaK-i0-wEJ">
                                 <rect key="frame" x="166" y="144" width="82" height="30"/>
                                 <state key="normal" title="로또번호 추천"/>
+                                <connections>
+                                    <action selector="moveToRecommend:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Eks-RR-xY7"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hjr-VP-Bhf">
                                 <rect key="frame" x="166" y="194" width="82" height="30"/>
