앱바, 바텀시트

--- a/ios_lottostat/_ui/LTAppBar/LTAppBar.xib
+++ b/ios_lottostat/_ui/LTAppBar/LTAppBar.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -18,28 +17,39 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xao-c1-zeu">
-                    <rect key="frame" x="10" y="5" width="44" height="40"/>
-                    <inset key="contentEdgeInsets" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xao-c1-zeu" userLabel="back">
+                    <rect key="frame" x="10" y="5" width="34" height="40"/>
+                    <inset key="contentEdgeInsets" minX="5" minY="0.0" maxX="5" maxY="0.0"/>
                     <state key="normal" image="ic_back"/>
                     <connections>
-                        <action selector="onLeftButton:" destination="-1" eventType="touchUpInside" id="5hl-QG-nis"/>
+                        <action selector="onBackButton:" destination="-1" eventType="touchUpInside" id="9hb-WK-iVD"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qnD-gF-xwU" userLabel="more">
+                    <rect key="frame" x="44" y="5" width="34" height="40"/>
+                    <inset key="contentEdgeInsets" minX="5" minY="0.0" maxX="5" maxY="0.0"/>
+                    <state key="normal" image="ic_more"/>
+                    <connections>
+                        <action selector="onMoreButton:" destination="-1" eventType="touchUpInside" id="aiJ-ak-KR4"/>
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="타이틀바" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9cE-bc-XU8">
-                    <rect key="frame" x="54" y="14" width="63" height="22"/>
+                    <rect key="frame" x="83" y="14" width="63" height="22"/>
                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" systemColor="systemYellowColor"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="9cE-bc-XU8" firstAttribute="leading" secondItem="Xao-c1-zeu" secondAttribute="trailing" id="7qB-Xq-qie"/>
                 <constraint firstAttribute="bottom" secondItem="Xao-c1-zeu" secondAttribute="bottom" constant="5" id="987-wE-xLZ"/>
+                <constraint firstItem="qnD-gF-xwU" firstAttribute="leading" secondItem="Xao-c1-zeu" secondAttribute="trailing" id="CwE-Xy-Qsk"/>
                 <constraint firstItem="Xao-c1-zeu" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="D8H-aF-E7y"/>
+                <constraint firstItem="9cE-bc-XU8" firstAttribute="leading" secondItem="qnD-gF-xwU" secondAttribute="trailing" constant="5" id="JDX-yM-p0Q"/>
                 <constraint firstItem="9cE-bc-XU8" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="QKd-Ze-pwW"/>
                 <constraint firstItem="Xao-c1-zeu" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="TVc-KE-BDb"/>
+                <constraint firstAttribute="bottom" secondItem="qnD-gF-xwU" secondAttribute="bottom" constant="5" id="alv-pH-uMn"/>
+                <constraint firstItem="qnD-gF-xwU" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="qbD-XV-9zi"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
@@ -49,8 +59,6 @@
     </objects>
     <resources>
         <image name="ic_back" width="24" height="24"/>
-        <systemColor name="systemYellowColor">
-            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="ic_more" width="24" height="24"/>
     </resources>
 </document>
