--- a/ios_lottostat/Controller/Recommend/RecommendViewController.storyboard
+++ b/ios_lottostat/Controller/Recommend/RecommendViewController.storyboard
@@ -48,21 +48,121 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MnE-H6-d9e">
-                                <rect key="frame" x="184" y="433" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                                <rect key="frame" x="292" y="106" width="106" height="40"/>
+                                <color key="backgroundColor" red="0.0" green="0.4823529411764706" blue="0.76470588235294112" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="bcm-3d-UiO"/>
+                                    <constraint firstAttribute="width" constant="106" id="nj1-U0-bba"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <state key="normal" title="필터">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="3"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="onFilter:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="BH0-WG-4WZ"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dRd-5h-J7S">
+                                <rect key="frame" x="178" y="106" width="106" height="40"/>
+                                <color key="backgroundColor" red="1" green="0.5607843137254902" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="106" id="Nia-a3-j2P"/>
+                                    <constraint firstAttribute="height" constant="40" id="dyC-ar-ALD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <state key="normal" title="저장">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="3"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P1J-J3-xIg" customClass="LTGradientButton" customModule="ios_lottostat" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="812" width="414" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Ysj-rP-OzQ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                <state key="normal" title="번호생성">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="color1">
+                                        <color key="value" red="0.078431372549019607" green="0.70980392156862748" blue="0.69019607843137254" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="color2">
+                                        <color key="value" red="0.086274509803921567" green="0.76862745098039209" blue="0.74901960784313726" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="color3">
+                                        <color key="value" red="0.10196078431372549" green="0.90980392156862744" blue="0.88235294117647056" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isVertical" value="NO"/>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="horizontal" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7C0-Gk-Qlm" userLabel="no_content">
+                                <rect key="frame" x="0.0" y="156" width="414" height="656"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JhY-L7-6Rv" customClass="HJDivider" customModule="ios_lottostat" customModuleProvider="target">
+                                        <rect key="frame" x="16" y="0.0" width="382" height="1"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="Ly2-gf-jaT"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="lineColor">
+                                                <color key="value" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_no_content" translatesAutoresizingMaskIntoConstraints="NO" id="UTO-Ho-z62">
+                                        <rect key="frame" x="40" y="61" width="40" height="40"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vRx-8i-1dQ">
+                                        <rect key="frame" x="40" y="111" width="119.5" height="53"/>
+                                        <string key="text">번호를
+추천받으세요.</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <color key="textColor" red="0.52941176470588236" green="0.52941176470588236" blue="0.52941176470588236" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="UTO-Ho-z62" firstAttribute="leading" secondItem="7C0-Gk-Qlm" secondAttribute="leading" constant="40" id="2oY-hA-jQX"/>
+                                    <constraint firstAttribute="trailing" secondItem="JhY-L7-6Rv" secondAttribute="trailing" constant="16" id="JyK-nr-LNg"/>
+                                    <constraint firstItem="UTO-Ho-z62" firstAttribute="top" secondItem="JhY-L7-6Rv" secondAttribute="bottom" constant="60" id="PST-rQ-Mq1"/>
+                                    <constraint firstItem="JhY-L7-6Rv" firstAttribute="top" secondItem="7C0-Gk-Qlm" secondAttribute="top" id="RfY-iT-cRN"/>
+                                    <constraint firstItem="vRx-8i-1dQ" firstAttribute="leading" secondItem="UTO-Ho-z62" secondAttribute="leading" id="hC1-bc-Byy"/>
+                                    <constraint firstItem="JhY-L7-6Rv" firstAttribute="leading" secondItem="7C0-Gk-Qlm" secondAttribute="leading" constant="16" id="jbG-J8-uba"/>
+                                    <constraint firstItem="vRx-8i-1dQ" firstAttribute="top" secondItem="UTO-Ho-z62" secondAttribute="bottom" constant="10" id="nCg-4R-QfI"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="P1J-J3-xIg" secondAttribute="bottom" id="09S-qv-sDU"/>
+                            <constraint firstItem="dRd-5h-J7S" firstAttribute="top" secondItem="MnE-H6-d9e" secondAttribute="top" id="0YG-gg-nRI"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="P1J-J3-xIg" secondAttribute="trailing" id="0p6-ct-Cuf"/>
+                            <constraint firstItem="P1J-J3-xIg" firstAttribute="top" secondItem="7C0-Gk-Qlm" secondAttribute="bottom" id="1bO-7g-4iB"/>
+                            <constraint firstItem="7C0-Gk-Qlm" firstAttribute="top" secondItem="MnE-H6-d9e" secondAttribute="bottom" constant="10" id="6Fc-dn-l54"/>
                             <constraint firstItem="KJX-hm-T5l" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="A3f-OK-rwj"/>
+                            <constraint firstItem="P1J-J3-xIg" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Jp7-ux-GJw"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="7C0-Gk-Qlm" secondAttribute="trailing" id="MZ4-Q1-5mw"/>
+                            <constraint firstItem="7C0-Gk-Qlm" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Mfx-kZ-tPx"/>
                             <constraint firstItem="KJX-hm-T5l" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Q2m-vU-ZXS"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="KJX-hm-T5l" secondAttribute="trailing" id="edl-f4-H8e"/>
-                            <constraint firstItem="MnE-H6-d9e" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="lR2-HH-7Mv"/>
-                            <constraint firstItem="MnE-H6-d9e" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="lwx-lk-xUl"/>
+                            <constraint firstItem="MnE-H6-d9e" firstAttribute="leading" secondItem="dRd-5h-J7S" secondAttribute="trailing" constant="8" id="i2U-kc-BdE"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="MnE-H6-d9e" secondAttribute="trailing" constant="16" id="nee-3U-V5x"/>
+                            <constraint firstItem="MnE-H6-d9e" firstAttribute="top" secondItem="KJX-hm-T5l" secondAttribute="bottom" constant="12" id="x9W-RY-che"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="8gS-Y0-MN1"/>
@@ -91,6 +191,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="ic_no_content" width="40" height="40"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
